deployment_react.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react
  namespace: "default"
  labels:
    app: front
    env: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react
  template:
    metadata:
      labels:
        app: react
    spec:
      containers:
      - name: react-container
        imagePullPolicy: Always
        image: 946701551755.dkr.ecr.ap-northeast-1.amazonaws.com/test/docker-test:v1
        ports:
          - containerPort: 3000
