service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "test-app-service"
  namespace: "default"
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: NodePort
  selector:
    app: "test-app"
