service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: "default"
spec:
  type: NodePort
  selector:
    app: react
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
