ingress-http.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "test-app-ingress"
  namespace: "default"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: test-app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "test-app-service"
              servicePort: 80
